--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitest/coverage-v8": "^1.1.3",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
   },
