--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/express": "^4.17.21",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/uuid": "^9.0.7",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.1.3",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
@@ -24,7 +24,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "uuid": "^9.0.1"
+    "mongoose": "^8.0.3"
   }
 }
