feat(repository): added mongoDb as oine of the possible repository providers

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "geno-url-shortener",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "dist/app.js",
   "license": "MIT",
   "scripts": {
     "start": "node dist/app.js",
     "dev": "concurrently \"npx tsc -w\" \"nodemon -q dist/app.js\"",
+    "build": "tsc",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
@@ -24,6 +25,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongodb": "^6.3.0",
+    "zod": "^3.22.4"
   }
 }
