--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
@@ -23,6 +24,7 @@
     "vitest": "^1.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
